Tue May  4 23:46:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/xmlrpc/README.txt: introduced for documentation purposes

Mon May  3 09:47:24 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_method_or_yield_parameters):
	  Fix parsing bug if yield called within 1 line block

Sun May  2 01:04:38 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib, ext/tk: renewal Ruby/Tk

Fri Apr 30 20:08:41 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* time.c (SIZEOF_TIME_T): support SIZEOF_TIME_T == SIZEOF_INT.

Tue Apr 27 08:41:28 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb: passing Range tests.

	* ext/syck/syck.h: version 0.44.

	* ext/syck/gram.c: transfers no longer open an indentation.
	  fixed transfers which precede blocks.

	* ext/syck/token.c: ditto.

	* ext/syck/syck.c: fixed segfault if an anchor has been released already.

	* ext/syck/node.c (syck_free_members): organized order of free'd nodes.

	* ext/syck/rubyext.c (syck_emitter_write_m): test for proper string with
	  StringValue.

Mon Apr 26 23:56:54 2004  Daniel Kelley  <news-1082945587@dkelley.gmp.san-jose.ca.us>

	* README.EXT, README.EXT.ja: fixed wrong function signature.
	  [ruby-talk:98349]

Mon Apr 26 21:40:09 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::add_alias): Only alias
	  to instance methods.

Sat Apr 24 10:38:31 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/markup/simple_markup.rb (SM::SimpleMarkup::group_lines):
	  Fix bug where consecutive headings are merged.

Fri Apr 23 23:26:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: $hdrdir should not contain macros for backward
	  compatibilitiy.  [bruby-dev:28]

	* version.c (ruby_show_copyright): obtain copyright year from
	  RUBY_RELEASE_YEAR.

	* win32/resource.rb: ditto.

	* win32/resource.rb: default rubyw icon to ruby.ico, and let DLL also
	  include them.
